packages/jsts/tests/dbd/benchmark/SyntaxError/S01 JSON.parse/S01-01/reproducer.js
function useLocalSearchParams() {
  return {};
}

///// fixture above

const { date } = useLocalSearchParams();

const selectedDate = JSON.parse(date); // Noncompliant
